--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.linkedin.com/in/imsathiya17" class="icon brands fa-linkedin" target="_blank"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/imsathiya17" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://linkedin.com/in/venkatesh-prasad-s-a8461b57" class="icon brands fa-linkedin" target="_blank"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/Prrasad91" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble" target=”_blank”><span class="label">Dribbble</span></a></li>
-							<li><a href="mailto:imsathiyass@hotmail.com" class="icon solid fa-envelope" target=”_blank”><span class="label">Email</span></a></li>
+							<li><a href="mailto:Venkateshprasad.s@hotmail.com" class="icon solid fa-envelope" target=”_blank”><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
