--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
 							</br>
 
-							<form method="post" action="https://formspree.io/f/xvodynev">
+							<form method="post" action="https://formspree.io/f/xayzlqlj">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
